Se Corrigio la parte de correo

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <input type="text" class="entrada" id="nombre" />
           </div>
           <div class="fila">
-            <label for="email">E-mail</label>
-            <input type="text" class="entrada" id="email" />
+            <label for="email">Email</label>
+            <input type="email" class="entrada" id="email" />
           </div>
           <div class="fila">
             <label for="asungo">Asunto</label>
