Se agrego foto de perfil

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </p>
       </div>
       <div class="area-imagen">
-        <img src="" alt="Perfil" class="imagen-perfil">
+        <img src="/src/assrerts/perfil.jpg" alt="Perfil" class="imagen-perfil">
       </div>
     </section>
 
