Se agrego links de redes sociales

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
           estudiando y profundizando en el desarrollo web y encontré el programa
           de Oracle One en Aula Latam
         </p>
+        <nav class="areaRedes">
+          <ul>
+            <li><a href="https://github.com/PabloSan1997?tab=repositories">Github 🡭</a></li>
+            <li><a href="https://www.linkedin.com/in/jos%C3%A9-pablo-santillana-g%C3%B3mez-199851118/">Linkedin 🡭</a></li>
+          </ul>
+        </nav>
       </div>
       <div class="area-imagen">
         <img src="/src/assrerts/perfil.jpg" alt="Perfil" class="imagen-perfil">
