--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <li><a href="#skills-hobbies" class="menu">Skills</a></li>
             <li><a href="#formacion" class="menu">Formación</a></li>
             <li><a href="#experiencia" class="menu">Proyectos</a></li>
-            <li><a href="#contacto" class="menu">jos_pab_997@hotmail.com</a></li>
+            <li>
+              <a href="#contacto" class="menu">jos_pab_997@hotmail.com</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -38,29 +40,43 @@
         </p>
         <nav class="areaRedes">
           <ul>
-            <li><a href="https://github.com/PabloSan1997?tab=repositories">Github 🡭</a></li>
-            <li><a href="https://www.linkedin.com/in/jos%C3%A9-pablo-santillana-g%C3%B3mez-199851118/">Linkedin 🡭</a></li>
+            <li>
+              <a href="https://github.com/PabloSan1997?tab=repositories"
+                >Github 🡭</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/jos%C3%A9-pablo-santillana-g%C3%B3mez-199851118/"
+                >Linkedin 🡭</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
       <div class="area-imagen">
-        <img src="/src/assrerts/perfil.jpg" alt="Perfil" class="imagen-perfil">
+        <img
+          src="/src/assrerts/perfil.jpg"
+          alt="Perfil"
+          class="imagen-perfil"
+        />
       </div>
     </section>
 
     <section class="seccion" id="sobremi">
       <h2>Sobre mi</h2>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi culpa
-        provident nostrum fugit? Minima ullam itaque iure. Ab quod adipisci sed
-        aperiam nisi. Dignissimos, quia reiciendis? Dolorem voluptates vitae
-        eos?
+        Ingeniero mecatrónico que se ha interesado en un desarrollador web
+        junior frontend con conocimientos básicos de backend. Mi formación
+        académica en mecatrónica me ha equipado con una fuerte mentalidad
+        analítica y habilidades para resolver problemas, que estoy ansioso por
+        aplicar al campo del desarrollo web.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eligendi
-        autem quam recusandae rerum ad, veniam, consectetur fugit fugiat porro
-        corporis provident tempore aliquam nesciunt tempora necessitatibus?
-        Harum, non eveniet.
+        Si bien puedo carecer de experiencia directa en la industria, soy
+        entusiasta, adaptable y estoy comprometido a aprovechar mi destreza
+        técnica para contribuir de manera efectiva en un entorno de desarrollo
+        colaborativo.
       </p>
     </section>
 
@@ -72,33 +88,22 @@
       <div class="contenedor hobbies">
         <h2>Hobbies</h2>
         <div class="area-cajas"></div>
+      </div>
     </section>
 
     <section class="seccion" id="formacion">
       <div class="caja">
-        <img
-          src=""
-          alt="formaciones"
-          class="formacion-imagen"
-        />
+        <img src="" alt="formaciones" class="formacion-imagen" />
         <span class="nombre">Preparatoria</span>
         <span class="tiempo">2013-2016</span>
       </div>
       <div class="caja">
-        <img
-          src=""
-          alt="formaicones"
-          class="formacion-imagen"
-        />
+        <img src="" alt="formaicones" class="formacion-imagen" />
         <span class="nombre">Ingeniría Mecatrónica</span>
         <span class="tiempo">2016-2022</span>
       </div>
       <div class="caja">
-        <img
-          src=""
-          alt="formaciones"
-          class="formacion-imagen"
-        />
+        <img src="" alt="formaciones" class="formacion-imagen" />
         <span class="nombre">Formación desarrollo Web</span>
         <span class="tiempo">2023-En curso</span>
       </div>
@@ -110,7 +115,7 @@
 
     <section class="seccion" id="contacto">
       <div class="area-imagen">
-        <img src="./src/assrerts/telefono.png" alt="">
+        <img src="./src/assrerts/telefono.png" alt="" />
       </div>
       <div class="area-formulario">
         <h2>Contacto</h2>
